[metadata]
name = Getch
version = 0.1.0-beta
url = https://lukedevj.github.com/getch
project_urls = 
    Donate = https://coinos.io/lukedevj
    Twitter =  https://twitter.com/lukedevj

description = Manage multiple Lightning nodes in a simple way.

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    getch = getch.cli:main
